# CodeGraph-Intelligence

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  BUILD_PLAN.md  CodeGraph_Intelligence_Platform_Detailed.md  LICENSE  README.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml
docs/: COMPETITOR_ANALYSIS_2026-07-11.md  COST_EFFICIENCY_FINDINGS_2026-07-10.md  MANUAL_TEST_PROMPT.md  MANUAL_TEST_REPORT.md  PATTERN_AUDIT_PLAN_2026-07-07.md  QUALITY_REPORT_2026-07-01.md  REAL_WORLD_STRESS_TEST_2026-07-06.md  REAL_WORLD_STRESS_TEST_2026-07-07-ledgerguard.md  REAL_WORLD_STRESS_TEST_2026-07-07.md  VERIFICATION.md
plan/: 00-setup.md  01-slice.md  02-multifile.md  03-embeddings.md  04-callgraph.md  05-graphrag.md  06-webui.md  07-mcp.md  08-polish.md  09-stretch.md
tests/: test_api.py  test_ask.py  test_brief.py  test_c_cpp_parser.py  test_calls.py  test_chunking.py  test_cli.py  test_cli_context_trace_status.py  test_cli_init.py  test_cli_install_uninstall.py  test_cross_file_routes.py  test_cycles.py  test_deps.py  test_doctor.py  test_e2e_index.py  test_embeddings.py  test_first_run.py  test_git_hooks.py  test_go_parser.py  test_graph_store.py  test_graphrag.py  test_hybrid_search.py  test_impact.py  test_incremental.py  test_inheritance.py  test_installer_core.py  test_installer_guide.py  test_installer_targets.py  test_installer_targets_extended.py  test_java_parser.py  test_llm.py  test_locate.py  test_mcp.py  test_new_lang_parsers.py  test_ownership.py  test_packaging.py  test_patterns.py  test_php_parser.py  test_prompt_assembly.py  test_python_parser.py  (+21 more)
(+17 files in other folders)
