[project]
name = "codegraph"
version = "0.1.0"
description = "Local AI memory layer for codebases — graph + semantic search + GraphRAG + MCP server"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Kunal Mathur" }]
dependencies = [
  "tree-sitter==0.21.*",
  "tree-sitter-languages>=1.10",
  "duckdb>=1.0",
  "typer>=0.12",
  "rich>=13",
  "pathspec>=0.12",
  "pydantic>=2.6",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sentence-transformers>=2.7",
  "anthropic>=0.39",
  "mcp>=1.0",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "httpx>=0.27",
]

[project.scripts]
codegraph = "codegraph.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages/codegraph"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
# E501 = line too long (covered by formatter)
# B008 = function call in argument default (intentional for typer.Option / FastAPI Depends)
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["packages"]
